--- a/views/beers.hbs
+++ b/views/beers.hbs
@@ -1,4 +1,17 @@
-<article class='box'>
+ <div class='single-beer'>
+{{#each beersFromApi}}
+    {{> beerPartial}}
+   {{/each}}
+    </div>
+
+
+
+
+
+
+
+
+{{!-- <article class='box'>
 
   {{#each beersFromApi}}
 
@@ -12,4 +25,4 @@
     </div>
 
   {{/each}}
-</article>
+</article> --}}
